--- a/config.json
+++ b/config.json
@@ -1,3 +1,4 @@
 {
-  "token":"NTA5MDMzNDc5MTA4MDM0NTYw.DsH_nA.libdOEl0mP-_smshyPlU9JcD6YA"
+  "token":"NTA5MDMzNDc5MTA4MDM0NTYw.DsImIg.E6DfWGsDByCXEhRlM5rvgWpm5ck",
+  "developers": ["301613319998013440", "224084384054116352"]
 }
