added util for page switcher

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "applicationName": "MioBot",
-  "token":"NTA5MDMzNDc5MTA4MDM0NTYw.Dsh-Kg.R2CeZIltaXlO6m1gzBASfbeQm5U",
+  "token":"",
   "prefix": ">>",
   "version": "0.2.5b",
   "developers": ["301613319998013440", "224084384054116352"]
