--- a/config.example.json
+++ b/config.example.json
@@ -1,3 +1,13 @@
 {
-    "token":"token_goes_here"
-}  
+    "applicationName": "Rhodium",
+    "token":"your token",
+    "prefix": ">>",
+    "version": "0.2.7b",
+    "developers": ["301613319998013440", "224084384054116352"],
+    "mysql": {
+      "hostname": "you.server.com",
+      "username": "username",
+      "dbname": "your_db",
+      "password": "your_pw"
+    }
+  }
