--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Ron31/Mio#readme",
   "dependencies": {
+    "@octokit/rest": "^16.3.0",
     "colors": "^1.3.3",
     "discord.js": "^11.4.2",
     "mysql2": "^1.6.1",
