--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@octokit/rest": "^16.3.0",
     "colors": "^1.3.3",
     "discord.js": "^11.4.2",
+    "express": "^4.16.4",
     "mysql2": "^1.6.1",
     "ping": "^0.2.2",
     "sequelize": "^4.39.0",
     "snekfetch": "^4.0.4",
+    "socket.io": "^2.2.0",
     "systeminformation": "^3.47.0"
   }
 }
