--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MioBot",
   "main": "mio.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint-md": "remark ."
   },
   "repository": {
     "type": "git",
@@ -23,9 +23,18 @@
     "express": "^4.16.4",
     "mysql2": "^1.6.1",
     "ping": "^0.2.2",
+    "remark": "^10.0.1",
+    "remark-cli": "^6.0.1",
+    "remark-preset-lint-recommended": "^3.0.2",
+    "remark-stringify": "^6.0.4",
     "sequelize": "^4.39.0",
     "snekfetch": "^4.0.4",
     "socket.io": "^2.2.0",
     "systeminformation": "^3.47.0"
+  },
+  "remarkConfig": {
+    "plugins": [
+      "remark-preset-lint-recommended"
+    ]
   }
 }
